--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,17 +1,21 @@
-FROM centos:7
+FROM ubuntu:18.04
 
 WORKDIR /root
 
-COPY tdengine.tar.gz /root/
-RUN tar -zxf tdengine.tar.gz
-WORKDIR /root/TDengine-server/
-RUN sh install.sh -e no
+ARG ver
 
+COPY bin/TDengine-server-${ver}-Linux-x64.tar.gz /root/
+RUN tar -zxf TDengine-server-${ver}-Linux-x64.tar.gz
+WORKDIR /root/TDengine-server-${ver}/
+RUN /bin/bash install.sh -e no
 
+RUN apt-get clean && apt-get update && apt-get install -y locales
+RUN locale-gen en_US.UTF-8
 ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/lib"
+ENV LC_CTYPE=en_US.UTF-8
 ENV LANG=en_US.UTF-8
-ENV LANGUAGE=en_US:en
 ENV LC_ALL=en_US.UTF-8
+
 EXPOSE 6030 6031 6032 6033 6034 6035 6036 6037 6038 6039 6040 6041 6042
 CMD ["taosd"]
 VOLUME [ "/var/lib/taos", "/var/log/taos","/etc/taos/" ]
