--- a/helm/tdengine/templates/tdengine-init.yaml
+++ b/helm/tdengine/templates/tdengine-init.yaml
@@ -11,14 +11,18 @@ spec:
   containers:
     - name: "{{ .Release.Name }}-init"
       image: "{{ .Values.Image }}:{{ .Values.ImageTag }}"
-      command: ["bash", "+x", "/root/cluster_init.sh","{{ template "tdengine.fullname" . }}-1.{{ template "tdengine.fullname" . }}:6030","{{ template "tdengine.fullname" . }}-2.{{ template "tdengine.fullname" . }}:6030"]
+      command: ["bash", "+x", "/root/cluster_init.sh","{{ template "tdengine.fullname" . }}-1.{{ template "tdengine.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local:6030","{{ template "tdengine.fullname" . }}-2.{{ template "tdengine.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local:6030"]
       env:
         - name: STATEFULSET_NAME
           value: "{{ template "tdengine.fullname" . }}"
+        - name: STATEFULSET_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: serverPort
           value: "6030"
         - name: firstEp
-          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAME):$(serverPort)"
+          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
         - name: secondEp
-          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAME):$(serverPort)"
+          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
   restartPolicy: Never
