--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -2,24 +2,24 @@ version: '3.5'
 
 services:
   tdengine_cluster_init:
-    image: docker.flexem.com/library/tdengine:2.1.1.0
+    image: docker.flexem.com/library/tdengine:2.1.1.2
     restart: "no"
     container_name: tdengine_cluster_init
     command: bash +x /root/cluster_init.sh tdengine_1:6030 tdengine_2:6030
     environment:
-      firstEp: tdengine_0:6030
-      secondEp: tdengine_1:6030
+      TAOS_firstEp: tdengine_0:6030
+      TAOS_secondEp: tdengine_1:6030
     depends_on:
       - tdengine_0
   tdengine_0:
-    image: docker.flexem.com/library/tdengine:2.1.1.0
+    image: docker.flexem.com/library/tdengine:2.1.1.2
     restart: always
     container_name: tdengine_0
     environment:
-      firstEp: tdengine_0:6030
-      secondEp: tdengine_1:6030
-      fqdn: tdengine_0
-      serverPort: 6030
+      TAOS_firstEp: tdengine_0:6030
+      TAOS_secondEp: tdengine_1:6030
+      TAOS_fqdn: tdengine_0
+      TAOS_serverPort: 6030
     ports:
       - 6030:6030
       - 6035:6035
@@ -29,14 +29,14 @@ services:
       - /opt/tdengine/0/lib:/var/lib/taos
       - /opt/tdengine/0/log:/var/log/taos
   tdengine_1:
-    image: docker.flexem.com/library/tdengine:2.1.1.0
+    image: docker.flexem.com/library/tdengine:2.1.1.2
     restart: always
     container_name: tdengine_1
     environment:
-      firstEp: tdengine_0:6030
-      secondEp: tdengine_1:6030
-      fqdn: tdengine_1
-      serverPort: 6030
+      TAOS_firstEp: tdengine_0:6030
+      TAOS_secondEp: tdengine_1:6030
+      TAOS_fqdn: tdengine_1
+      TAOS_serverPort: 6030
     ports:
       - 6130:6030
       - 6135:6035
@@ -48,14 +48,14 @@ services:
       - /opt/tdengine/1/lib:/var/lib/taos
       - /opt/tdengine/1/log:/var/log/taos
   tdengine_2:
-    image: docker.flexem.com/library/tdengine:2.1.1.0
+    image: docker.flexem.com/library/tdengine:2.1.1.2
     restart: always
     container_name: tdengine_2
     environment:
-      firstEp: tdengine_0:6030
-      secondEp: tdengine_1:6030
-      fqdn: tdengine_2
-      serverPort: 6030
+      TAOS_firstEp: tdengine_0:6030
+      TAOS_secondEp: tdengine_1:6030
+      TAOS_fqdn: tdengine_2
+      TAOS_serverPort: 6030
     ports:
       - 6230:6030
       - 6235:6035
