--- a/helm/deplayment.yaml
+++ b/helm/deplayment.yaml
@@ -99,7 +99,7 @@ metadata:
 spec:
   containers:
     - name: "tdengine-init"
-      image: "docker.flexem.com/library/tdengine:2.1.2"
+      image: "docker.flexem.com/library/tdengine:2.1.1.2"
       command: ["bash", "+x", "/root/cluster_init.sh","tdengine-1.tdengine.default.svc.cluster.local:6030","tdengine-2.tdengine.default.svc.cluster.local:6030"]
       env:
         - name: STATEFULSET_NAME
@@ -108,12 +108,12 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: serverPort
+        - name: TAOS_serverPort
           value: "6030"
-        - name: firstEp
-          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
-        - name: secondEp
-          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
+        - name: TAOS_firstEp
+          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(TAOS_serverPort)"
+        - name: TAOS_secondEp
+          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local:$(TAOS_serverPort)"
   restartPolicy: Never
 ---
 # Source: tdengine/templates/tdengine-statefulset.yaml
@@ -175,7 +175,7 @@ spec:
           value: basic
       containers:
       - name: "tdengine"
-        image: "docker.flexem.com/library/tdengine:2.1.2"
+        image: "docker.flexem.com/library/tdengine:2.1.1.2"
         imagePullPolicy: "Always"
         ports:
         - name: tcp6030
@@ -237,13 +237,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: serverPort
+        - name: TAOS_serverPort
           value: "6030"
-        - name: firstEp
-          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
-        - name: secondEp
-          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAMESPACE).svc.cluster.local:$(serverPort)"
-        - name: fqdn
+        - name: TAOS_firstEp
+          value: "$(STATEFULSET_NAME)-0.$(STATEFULSET_NAMESPACE).svc.cluster.local:$(TAOS_serverPort)"
+        - name: TAOS_secondEp
+          value: "$(STATEFULSET_NAME)-1.$(STATEFULSET_NAMESPACE).svc.cluster.local:$(TAOS_serverPort)"
+        - name: TAOS_fqdn
           value: "$(POD_NAME).$(STATEFULSET_NAMESPACE).svc.cluster.local"
         volumeMounts:
         - name: datadir
