--- a/helm/tdengine/templates/tdengine-statefulset.yaml
+++ b/helm/tdengine/templates/tdengine-statefulset.yaml
@@ -59,12 +59,42 @@ spec:
         - name: tcp6030
           protocol: "TCP"
           containerPort: 6030
+        - name: tcp6031
+          protocol: "TCP"
+          containerPort: 6031
+        - name: tcp6032
+          protocol: "TCP"
+          containerPort: 6032
+        - name: tcp6033
+          protocol: "TCP"
+          containerPort: 6033
+        - name: tcp6034
+          protocol: "TCP"
+          containerPort: 6034
         - name: tcp6035
           protocol: "TCP"
           containerPort: 6035
+        - name: tcp6036
+          protocol: "TCP"
+          containerPort: 6036
+        - name: tcp6037
+          protocol: "TCP"
+          containerPort: 6037
+        - name: tcp6038
+          protocol: "TCP"
+          containerPort: 6038
+        - name: tcp6039
+          protocol: "TCP"
+          containerPort: 6039
+        - name: tcp6040
+          protocol: "TCP"
+          containerPort: 6040
         - name: tcp6041
           protocol: "TCP"
           containerPort: 6041
+        - name: tcp6042
+          protocol: "TCP"
+          containerPort: 6042
         - name: udp6030
           protocol: "UDP"
           containerPort: 6030
@@ -98,6 +128,12 @@ spec:
         - name: udp6040
           protocol: "UDP"
           containerPort: 6040
+        - name: udp6041
+          protocol: "UDP"
+          containerPort: 6041
+        - name: udp6042
+          protocol: "UDP"
+          containerPort: 6042
         resources:
 {{ toYaml .Values.Resources | indent 10 }}
         env:
