--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -4,33 +4,37 @@ WORKDIR /root
 
 ARG ver
 
-COPY bin/TDengine-server-${ver}-Linux-x64.tar.gz /root/
-RUN tar -zxf TDengine-server-${ver}-Linux-x64.tar.gz && \
-    rm -rf TDengine-server-${ver}-Linux-x64.tar.gz && \
-    cd /root/TDengine-server-${ver}/ && \
+COPY bin/tdengine-tsdb-oss-${ver}-linux-x64.tar.gz /root/
+RUN tar -zxf tdengine-tsdb-oss-${ver}-linux-x64.tar.gz && \
+    rm -rf tdengine-tsdb-oss-${ver}-linux-x64.tar.gz && \
+    cd /root/tdengine-tsdb-oss-${ver}/ && \
     /bin/bash install.sh -e no && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        locales \
-        tzdata \
-        netcat \
-        curl \
-        gdb \
-        vim \
-        tmux \
-        less \
-        net-tools \
-        valgrind \
-        rsync && \
+    locales \
+    tzdata \
+    netcat \
+    curl \
+    gdb \
+    vim \
+    tmux \
+    less \
+    net-tools \
+    valgrind \
+    rsync && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     locale-gen en_US.UTF-8
 
-ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/lib"
-ENV LC_CTYPE=en_US.UTF-8
-ENV LANG=en_US.UTF-8
-ENV LC_ALL=en_US.UTF-8
+ENV LD_LIBRARY_PATH="${LD_LIBRARY_PATH:+$LD_LIBRARY_PATH:}/usr/lib" \
+    LC_CTYPE=en_US.UTF-8 \
+    LANG=en_US.UTF-8 \
+    LC_ALL=en_US.UTF-8
 
-EXPOSE 6030 6031 6032 6033 6034 6035 6036 6037 6038 6039 6040 6041 6042
-CMD ["taosd"]
+# 6030 taosd
+# 6041 taosAdapter
+# 6043 taosKeeper
+# 6060 taosExplorer
+EXPOSE 6030 6041 6043 6060
 VOLUME [ "/var/lib/taos", "/var/log/taos","/corefile" ]
+CMD ["taosd"]
